[package]
default-run = "easyp"
name = "easyp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "EasyPeas - On-demand HTTPS server with ACME certificate management"
publish = false

[[bin]]
name = "easyp"
path = "src/bin/easyp.rs"

[features]
default = ["acme", "extensions"]
acme = []
extensions = []

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
hickory-resolver = { workspace = true }
get_if_addrs = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
mio = { workspace = true }
rcgen = { workspace = true }
rustls = { path = "../rustls", features = ["aws-lc-rs", "log", "acme"] }
serde = { workspace = true }
tokio = { workspace = true }
webpki-roots = { workspace = true }
time = { workspace = true }
